remove nowrap for links, fixes #3134
Closes #3134

Merge request studip/studip!2113

--- a/resources/assets/stylesheets/less/links.less
+++ b/resources/assets/stylesheets/less/links.less
@@ -27,10 +27,6 @@ a:hover.toolbar {
     color: #eee;
 }
 
-a.link-intern, a.link-extern {
-    white-space: nowrap;
-}
-
 a.link-intern {
     .icon('before', 'link-intern', 'clickable', 16, 2px);
 }
